<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    tools:context="com.example.satyajit.a108ambulancefordrivers.MainActivity">

    <ImageView
        android:id="@+id/formLogo"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/trans_white_rectangle"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_staff"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="10dp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_with_us_if_you_are_new"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginBottom="30dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"

                />
            <AutoCompleteTextView
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableStart="@drawable/ic_user_icon"
                android:textSize="18sp"
                android:textColor="@color/secondaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:id="@+id/userEmail"
                android:layout_marginBottom="10dp"
                />
            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textColor="@color/secondaryTextColor"
                android:textColorHint="@color/secondaryTextColor"
                android:textSize="18sp"
                android:hint="@string/password"
                android:background="@drawable/rounded_white"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:drawableLeft="@drawable/ic_pass_icon"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:inputType="textPassword"
                android:id="@+id/userPassword"
                android:layout_marginBottom="10dp"


                />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginBottom="2dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/loginbutton"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:text="@string/login_as_a_driver"
                android:textColor="@color/white"
                android:textStyle="normal" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp">

                <Button
                    android:id="@+id/signup"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/register_button"
                    android:paddingEnd="5dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"

                    android:textStyle="normal" />

                <Button
                    android:id="@+id/forgotpassword"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/forgotpass"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/forgot_password"
                    android:textColor="@color/white"
                    android:textStyle="normal" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thankyou_for_being_a_part_of_our_mission"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginBottom="15dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        />

</LinearLayout>


